resources/less/hakija.less
@import "vars";
@import "mixins";
@import "component-layout";
@import "button-component";
@field-margin-left: 245px;
@form-select-width: 305px;
@notification-banner-height: 70px;
@notification-banner-height-mobile: 23px;
@total-banner-height: 97px + @notification-banner-height;
@total-banner-height-mobile: 90px + @notification-banner-height-mobile;

body {
  overflow-y: scroll;
  &.ataru-app__hakija {
    p {
      color: @neutral-grey-900;
    }
    a {
      .tertiary-button;
      padding: 0;
      text-decoration: underline;
      &:focus {
        outline: initial;
        box-shadow: none;
      }
    }
  }
}

.application__banner-container {
  z-index: 10;
  display: inline-block;
  position: fixed;
  width: 100%;
  top: 0;
}
/* Allows centering of top-banner which contains logo and send-button */
.application__top-banner-container {
  display: flex;
  justify-content: center;
  background-color: @primary-green-700;
}

.application__notification-banner-container {
  height: @notification-banner-height;
  background-color: @banner-blue;
  display: flex;
  align-items: center;
  justify-content: center;
  color: @white;
  font-size: 24px;
}

.application__virkailija-fill-ribbon {
  position: absolute;
  width: 400px;
  line-height: 50px;
  text-align: center;
  transform-origin: top left;
  transform: translate(-38px, 245px) rotate(-45deg);
  background: @opintopolku-green;
  color: white;
  font-size: 20px;
  box-shadow: 0px 4px 4px @gray-of-the-beast;
}

.application-top-banner {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  font-size: 14px;
  width: @desktop-content-width;
  top: 0;
  color: white;
  height: 82px;
  padding-top: 19px;
  padding-bottom: 19px;
}

.logo-fi {
  background: url(/hakemus/images/OPO_Logo_Header_suomi.svg) no-repeat;
  background-size: 100%;
  width: 160px;
  height: 100%;
}

.logo-sv {
  background: url(/hakemus/images/OPO_Logo_Header_ruotsi.svg) no-repeat;
  background-size: 100%;
  width: 160px;
  height: 100%;
}

.logo-en {
  background: url(/hakemus/images/OPO_Logo_Header_englanti.svg) no-repeat;
  background-size: 100%;
  width: 160px;
  height: 100%;
}

@send-button-width-mobile: 138px;

.application__readonly-container {
  width: 100%;
  @media only screen and (max-width: @desktop-content-width) {
    padding: 0 10px;
  }
}

.application-handling__nested-container {
  margin-left: 10px;
}

.application-handling__nested-container--readonly-arvosanat-taulukko {
  margin-left: 0;
}

.application-handling__nested-container--top-level {
  margin-left: 0px;
}

.application-handling__nested-container-option {
  margin-top: 10px;
}

.application__wrapper-contents {
  margin-top: 13px;
  width: 75%;
}
.application__form-field {
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;
}

@media only screen and (max-width: @mobile-width) {
  .application__form-field--readonly-arvosanat-taulukko {
    .flex-row(flex-start, flex-start);
  }

  .application__form-field-label.application__form-field-label--readonly-arvosanat-taulukko {
    flex-basis: 80px;
    flex-shrink: 0;
  }
}

@media only screen and (min-width: (@mobile-width + 1)) {
  .application__form-field--readonly-arvosanat-taulukko {
    .flex-row(center, flex-end);
  }

  .application__form-field-label.application__form-field-label--readonly-arvosanat-taulukko {
    display: none;
  }
}


.application__form-field--readonly-arvosanat-taulukko {
  margin: 0;
}

.application__form-field-label.application__form-field-label--readonly-arvosanat-taulukko {
  font-weight: 300;
}

.application__form-dropdown-followups {
  margin-top: 20px;

  & .application__form-field {
    margin-left: 0px;
  }
}

.application__form-field--person-info-note {
  margin-top: 13px;
}

.application__form-field-label {
  font-size: 14px;
  color: @text-color;
  margin-bottom: 6px;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  .semibold;
  max-width: 610px;
}
.application__form-field-label--verify-email {
  margin-top: 10px;
}
.application__form-field-not-edited {
  font-style: italic;
  margin: 0;
}

.application__form-info-text-inner {
  position: relative;
  font-size: 14px;
  transition: height 0.5s ease-in-out;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 10px;

  & p {
    margin: 0px 0px 7px 0px;
  }

  & p:last-child {
    margin-bottom: 0px;
  }
}

.application__form-info-text-inner--collapsed {
  height: 120px;
  margin-bottom: 5px;
}

.application__form-info-text-inner--collapsed:after {
  content:"";
  position:absolute;
  bottom: 0;
  left: 0;
  height:60px;
  width:100%;
  background: linear-gradient(rgba(0,0,0,0), white);
}

.application__form-info-text-collapse-button {
  cursor: pointer;
  border-radius: 3px;
  padding: 5px 10px;
  font-size: 14px;
  border: none;
  margin: 0 auto;
  margin-bottom: 5px;
  display: block;
}

.application__form-field-list {
  list-style-type: none;
  font-size: 14px;
  font-weight: 300;
  margin: 0 0 0 10px;
  padding: 0;
  display: flex;
  word-break: break-all;
}
.application__form-field-list li {
  display: table-row;
}
.application__form-field-list li::before {
  content: '-';
  padding-left: 10px;
  padding-right: 10px;
  display: table-cell;
  vertical-align: top;
}

.application__read-only-heading-text {
  color: @text-color;
  font-size: 15px;
  display: inline-block;
  margin: 0 0 20px 0;
}

.application__wrapper-heading {
  min-width: @field-margin-left;
  width: @field-margin-left;
  h2 {
    color: @text-color;
    font-size: 15px;
    font-weight: normal;
    text-transform: uppercase;
    margin-bottom: 0;
    max-width: 230px;
    word-wrap: break-word;
  }

  @media only screen and (max-width: @desktop-content-width) {
    position: static;
  }
}

.application__scroll-to-anchor {
  position: relative;
  top: -@total-banner-height;
  visibility: hidden;
  height: 0px;
}
/* ... */

